--- a/src/components/LoginForm.module.css
+++ b/src/components/LoginForm.module.css
@@ -11,24 +11,13 @@
 .form__heading{
     font-weight: 200;
 }
-.form__field {
-    position: relative;
-}
-.form__fieldLabel{
-    border: none;
-    border-radius: 5px;
-    padding: 3px;
-    position: absolute;
-    top: 0;
-    left: 10px;
-    transform: translateY(-50%);
-    background-color: #fff;
 
-}
 .form__fieldInput{
     box-sizing: border-box;
     width: 100%;
     padding: 8px 16px;
+    border: none;
+    border-radius: 5px;
 }
 
 .form__button {
@@ -40,4 +29,9 @@
     border-radius: 5px;
     background-color: #ff9741;
     color: #ffffff;
+}
+
+.form__button:disabled {
+    background-color: darkgrey;
+    cursor: not-allowed;
 }
